Fix vertical and horizontal scrolling issues and add metadata description

--- a/app/globals.css
+++ b/app/globals.css
@@ -32,6 +32,11 @@
 *::before,
 *::after {
   box-sizing: border-box;
+  /* margin: 0; */
+}
+
+html {
+  height: 100%;
 }
 
 body {
@@ -41,9 +46,8 @@ body {
   color: #ededed;
   /* font-family: Arial, Helvetica, sans-serif; */
   margin: 0;
+  height: 100%;
   font-size: 16px;
-  height: 100vh;
-  /* border: 1px solid lightblue; */
 }
 
 img {
